      channel audio output device"
    - fixed a crash which occurs when reassigning the same engine
      on a sampler channel with connected MIDI device
    - fixed a crash which occurs when changing the number of ports of a MIDI
      device connected to a sampler channel to number less then or equal
      to the index of the port to which the sampler channel is connected.

  * test cases:
    - updated and fixed (haven't been touched in a while)

Version 0.4.0 (24 November 2006)

  * packaging changes:
    - changed deprecated copyright attribute to license; added ldconfig
      to post-(un)install steps; added devel package for liblinuxsampler;
      to linuxsampler.spec (RPM)
    - install necessary development header files for allowing 3rd party
      applications to link against liblinuxsampler
    - liblinuxsampler's API documentation can be generated with 'make docs'
      (Doxygen required)
    - added benchmark to automatically detect the best triangle LFO
      implementation (currently either an integer math solution or a
      di-harmonic approximation), automatic detection can be overriden
      with --enable-signed-triang-algo=x and --enable-unsigned-triang-algo=x
      configure script argument though (mandatory for cross-compilation)
    - do not automatically pick optimized gcc flags if the user already
      provided some on his own (as CXXFLAGS)
    - added compile time option to disable processing of All-Notes-Off MIDI
      messages
    - added compile time options to allow disabling the various audio and
      MIDI drivers
    - fixed automatic GCC CPU switch detection on PPC
      (patch by Ebrahim Mayat)

  * Gigasampler format engine:
    - extensive synthesis optimization
      (reimplementation of EGs and LFO(s), removed synthesis parameter
      prerendering and the synthesis parameter matrix in general, splitting
      each audio fragment into subfragments now where each subfragment uses