@@ -109,6 +109,9 @@ Version CVS HEAD (?)
     - fixed a crash which occurs when changing the number of ports of a MIDI
       device connected to a sampler channel to number less then or equal
       to the index of the port to which the sampler channel is connected.
+    - The previous bindings were not been disconnected when altering
+      the ALSA_SEQ_BINDINGS parameter. Introduced a NONE keyword for
+      unsubscribing from all bindings (e.g. ALSA_SEQ_BINDINGS=NONE).
 
   * test cases:
     - updated and fixed (haven't been touched in a while)
